tests/baselines/reference/YieldStarExpression4_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression4_es6.ts(2,13): error TS2489: An iterator must have a 'next()' method.


==== tests/cases/conformance/es6/yieldExpressions/YieldStarExpression4_es6.ts (1 errors) ====
    function *g() {
        yield * [];
                ~~
!!! error TS2489: An iterator must have a 'next()' method.
    }